
- the dialogs use wxApp::GetTopWindow() as the parent implicitly if the
  parent specified is NULL, use wxDIALOG_NO_PARENT style to prevent this
  from happening

- several obsolete synonyms are only retained in WXWIN_COMPATIBILITY_2_2 mode:
  for example, use wxScrolledWindow::GetViewStart() now instead of ViewStart()
  and GetCount() instead of Number() in many classes


wxMSW:

! build system changed: setup.h is not a static file in include/wx any more
  but is created as part of the build process under lib/<toolkit>/wx/include
  where <toolkit> is of the form (msw|univ)[dll][u][d]. You'll need to update
  the include path in your make/project files appropriately. Furthermore,
  xpm.lib is no longer used by wxMSW, it was superseded by the wxXPMDecoder
  class. You'll need to remove all references to xpm.lib from your 
  make/project files.

- child frames appear in the taskbar by default now, use wxFRAME_NO_TASKBAR
  style to avoid it

- all overloads of wxDC::SetClippingRegion() combine the given region with the
  previously selected one instead of replacing it

- wxGetHomeDir() uses HOME environment variable and if it is set will not
  return the programs directory any longer but its value (this function has
  never been meant to return the programs directory anyhow)

- wxHTML apps don't need to include wx/html/msw/wxhtml.rc in resources file
  anymore. The file was removed from wxMSW


Unix ports:

! You should use `wx-config --cxxflags` in your makefiles instead of
  `wx-config --cflags` for compiling C++ files. CXXFLAGS contains CFLAGS
  and the compiler flags for C++ files only, CFLAGS should still be used
  to compile pure C files.


wxThread and related classes:

- The thread-related classes have been heavily changed since 2.2.x versions
  as the old code had many serious problems. This could have resulted in
  semantical changes other than those mentioned here, please review use of
  wxThread, wxMutex and wxCondition classes in your code.
